# puffinn

./: .gitignore  CMakeLists.txt  notes.md  readme.md  requirements.txt
experiments/: main.cpp
experiments/include/: ang_dist.hpp  benchmarks.hpp  euc_maha.hpp  inertia_variance.hpp  l2_quantization_error.hpp  lsh_filter_t.hpp  threshhold.hpp  time_kmeans.hpp  utils.hpp
experiments/results/: explore_results.ipynb  explore_vdev.ipynb  glove-25-subset-ang.hdf5  l2_quant_error.hdf5  plots.py  plotting.ipynb  prec_recall.py  time_analysis.py  time_kmeans_V0.hdf5  time_kmeans_V1.hdf5
include/: puffinn.hpp
include/puffinn/: collection.hpp  dataset.hpp  kmeans.hpp  pq_filter.hpp
include/puffinn/format/: generic.hpp  real_vector.hpp  unit_vector.hpp
python/wrapper/: python_wrapper.cpp
report/: related_work.md
test/: code.cpp  quick.cpp
test/include/: collection_test.hpp  dataset_test.hpp  kmeans_test.hpp  pq_filter_test.hpp  utils.hpp
